@@ -24,7 +24,7 @@ else:
 # shutdown time.  That frustrates tests trying to check stderr produced
 # from a spawned Python process.
 def remove_stderr_debug_decorations(stderr):
-    return re.sub(r"\[\d+ refs\]\r?\n?$", "", str8(stderr))
+    return re.sub(r"\[\d+ refs\]\r?\n?$", "", str(stderr))
 
 class ProcessTestCase(unittest.TestCase):
     def setUp(self):
